force-app/main/default/objects/cgc_sync__Sync_API_Log__c/cgc_sync__Sync_API_Log__c.object-meta.xml
<CustomObject>
    <description>Stores performance information executed of  the Synchronization Endpoints.</description>
    <label>Sync Endpoint Log</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Sync Endpoint Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sync Endpoint Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>