force-app/main/default/objects/cgc_sync__Sync_API_Log__c/fields/cgc_sync__Category__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Category__c</fullName>
    <description>Stores the category of the KPI, for example if the KPI is about named queries, this could be set to &quot;Named Query Binding Time&quot;</description>
    <inlineHelpText>Stores the category of the KPI, for example if the KPI is about named queries, this could be set to &quot;Named Query Binding Time&quot;</inlineHelpText>
    <label>Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>