force-app/main/default/objects/cgc_sync__Sync_API_Log__c/fields/cgc_sync__Device_Id__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Device_Id__c</fullName>
    <description>ID of the device that created the log.</description>
    <label>Device Id</label>
    <length>64</length>
    <type>Text</type>
</CustomField>