force-app/main/default/objects/cgc_sync__Sync_API_Log__c/fields/cgc_sync__Endpoint_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Endpoint_Class_Name__c</fullName>
    <description>Stores the relevant Apex REST Endpoint&apos;s implementer class&apos;s name as a string.</description>
    <inlineHelpText>Stores the relevant Apex REST Endpoint&apos;s implementer class&apos;s name as a string.</inlineHelpText>
    <label>Endpoint Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>