force-app/main/default/objects/cgc_sync__Sync_API_Log__c/fields/cgc_sync__Measured_At__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Measured_At__c</fullName>
    <defaultValue>Now()</defaultValue>
    <description>Stores the exact date and time when the measurement was performed for this particular KPI.</description>
    <inlineHelpText>Stores the exact date and time when the measurement was performed for this particular KPI.</inlineHelpText>
    <label>Measured At</label>
    <type>DateTime</type>
</CustomField>