force-app/main/default/objects/cgc_sync__Sync_API_Log__c/fields/cgc_sync__Output_Data_Volume__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Output_Data_Volume__c</fullName>
    <description>Stores the size/volume of output (resulting) data for the task/query that&apos;s being measured (if applicable). 
For example if you are measuring a named query execution you could place here the number of records that is contained in the result set.</description>
    <inlineHelpText>Stores the size/volume of output (resulting) data for the task/query that&apos;s being measured (if applicable). 
For example if you are measuring a named query execution you could place here the number of records that is contained in the result set.</inlineHelpText>
    <label>Output Data Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>