force-app/main/default/objects/cgc_sync__Sync_API_Log__c/fields/cgc_sync__Request_Id__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Request_Id__c</fullName>
    <description>UUID that we generate once per API call.</description>
    <label>Request Id</label>
    <length>32</length>
    <type>Text</type>
</CustomField>