force-app/main/default/objects/cgc_sync__Sync_API_Log__c/fields/cgc_sync__SOQL_Statement__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__SOQL_Statement__c</fullName>
    <description>Stores the related SOQL statement that&apos;s been measured, or set to a blank string if the KPI is not tied to any specific SOQL statement but rather some higher level metric.</description>
    <inlineHelpText>Stores the related SOQL statement that&apos;s been measured, or set to a blank string if the KPI is not tied to any specific SOQL statement but rather some higher level metric.</inlineHelpText>
    <label>SOQL Statement</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>