force-app/main/default/objects/cgc_sync__Sync_API_Log__c/fields/cgc_sync__Subcategory__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Subcategory__c</fullName>
    <description>Stores the subcategory of the KPI. For example if the KPI is about named queries, and the category is &quot;Named Query Binding Time&quot;, then this could be storing the name of the exact named query we are measuring.</description>
    <inlineHelpText>Stores the subcategory of the KPI. For example if the KPI is about named queries, and the category is &quot;Named Query Binding Time&quot;, then this could be storing the name of the exact named query we are measuring.</inlineHelpText>
    <label>Sub Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>