force-app/main/default/objects/cgc_sync__Sync_API_Log__c/fields/cgc_sync__Sync_Id__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Sync_Id__c</fullName>
    <description>Specifies the alphanumeric ID of a sync operation. The ID is unique to each sync
        operation. If multiple logs are generated from a single sync process, then all log records
        will carry the same sync ID.</description>
    <inlineHelpText>Specifies the alphanumeric ID of a sync operation. The ID is unique to each sync operation.</inlineHelpText>
    <label>Sync Id</label>
    <length>36</length>
    <type>Text</type>
</CustomField>