force-app/main/default/objects/cgc_sync__Sync_API_Log__c/fields/cgc_sync__Value__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Value__c</fullName>
    <description>Stores the value of the key performance indicator. For example the number of milliseconds it took to execute a particular query or task.</description>
    <inlineHelpText>Stores the value of the key performance indicator. For example the number of milliseconds it took to execute a particular query or task.</inlineHelpText>
    <label>Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>